# ai-engineering-self-study

./: .gitignore  README.md
ai-engineering/langraph/: pyproject.toml
ai-engineering/langraph/ai_agents/: 1.basic_memory_agent.py  2.memory_agent.py  3.react_agent.py  4.drafter_agent.py  5.rag_agent.py
ai-engineering/langraph/basics/: 1.multi-input.ipynb  2.sequential_nodes.ipynb  3.conditional_nodes.ipynb  4.looping_graph.ipynb
ai-engineering/langraph/memory/: .env.example  full_agent.ipynb  memory_agent.ipynb  semantic+episodic_agent.ipynb
software-engineering/DSA/: utils.py
software-engineering/DSA/graph&trees/1.representation/: adjacency_list.py  adjacency_list_weighted.py  adjacency_matrix.py  adjacency_matrix_weighted.py
software-engineering/DSA/graph&trees/2.DFS/: DFS_algorithm.py  DFS_algorithm_stack.py  README.md  count_connected_components.py  has_path.py  largest_component.py  undirected_path.py
software-engineering/DSA/graph&trees/3.BFS/: BFS_algorithm.py  README.md  count_connected_components.py  has_path.py  largest_component.py  undirected_path.py
software-engineering/DSA/search/: binary_search.py
software-engineering/DSA/sorting/: bubble.py  insertion.py  merge_sort.py  quicksort.py  selection.py
software-engineering/DSA/utils/: benchmark.py
software-engineering/network-engineering/TCP&UDP/simple-chat/benchmark/: tcp.py  udp.py
software-engineering/network-engineering/TCP&UDP/simple-chat/tcp/: client.py  server.py
software-engineering/system-design/: README.md
(+2 files in other folders)
